packages/parser/test/parser/E0140.txt
a: (int, ,) -> void
===== err =====
anonymous:1:9: ParseError: E0140 - Expected function type parameter type
1 | a: (int, ,) -> void
  |         ^
